# swe-bench

./: .gitignore  CHANGES.md  DESIGN_DOMAINS.md  MANUAL.md  README.md  TASKS.md  USAGE.md  config.yaml  pyproject.toml
llmbench/: __init__.py  certify.py  cli.py  compare.py  functional.py  patch.py  prompts.py  report.py  runner.py  sandbox.py  scoring.py  tasks.py  usability.py
llmbench/clients/: __init__.py  base.py  mock.py  multiagent.py  ollama.py  openai_compat.py
llmbench/graders/: __init__.py  checks.py  code.py  constraint.py  detection.py  judge.py  qa.py
llmbench/quality/: __init__.py  complexity.py  llm_review.py  ruff_check.py  sonar.py
tasks/: tasks.jsonl  tasks_gen.jsonl  tasks_l6.jsonl  tasks_l7.jsonl  tasks_l7_v1.jsonl  tasks_med.jsonl  tasks_sec.jsonl  tasks_write.jsonl
tasks/g01_json_status/: checks.json  gold_answer.md  issue.md  issue_ja.md
tasks/g02_five_bullets/: checks.json  gold_answer.md  issue.md  issue_ja.md
tasks/g03_formal_reply/: checks.json  gold_answer.md  issue.md  issue_ja.md
tasks/m01_pharm_mcq/: issue.md  issue_ja.md
tasks/m02_diag_mcq/: issue.md  issue_ja.md
tasks/m03_firstline/: gold.json  issue.md  issue_ja.md
tasks/m04_physio/: gold.json  issue.md  issue_ja.md
tasks/m05_clopidogrel_moa/: gold.json  issue.md  issue_ja.md
tasks/m06_acetaminophen_antidote/: gold.json  issue.md  issue_ja.md
tasks/m07_inferior_mi_artery/: issue.md  issue_ja.md
tasks/m08_hcm_diagnosis/: gold.json  issue.md  issue_ja.md
tasks/m10_opioid_antidote/: gold.json  (+2 more)
tests/: test_certify_merge.py  test_connection.py  test_ledgers.py
(+757 files in other folders)
